ContactListView main purpose working